; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_core_content_download.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/cbs/extr_menu_cbs_ok.c_action_ok_core_content_download.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_UNKNOWN = common dso_local global i32 0, align 4
@MENU_ENUM_LABEL_CB_CORE_CONTENT_DOWNLOAD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i32, i64, i64)* @action_ok_core_content_download to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @action_ok_core_content_download(i8* %0, i8* %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  store i8* null, i8** %11, align 8
  store i8* null, i8** %12, align 8
  %14 = load i32, i32* @MSG_UNKNOWN, align 4
  store i32 %14, i32* %13, align 4
  %15 = call i32 @menu_entries_get_last_stack(i8** %11, i8** %12, i32* null, i32* %13, i32* null)
  %16 = load i8*, i8** %6, align 8
  %17 = load i8*, i8** %7, align 8
  %18 = load i8*, i8** %11, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i64, i64* %9, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i32, i32* @MENU_ENUM_LABEL_CB_CORE_CONTENT_DOWNLOAD, align 4
  %23 = call i32 @action_ok_download_generic(i8* %16, i8* %17, i8* %18, i32 %19, i64 %20, i64 %21, i32 %22)
  ret i32 %23
}

declare dso_local i32 @menu_entries_get_last_stack(i8**, i8**, i32*, i32*, i32*) #1

declare dso_local i32 @action_ok_download_generic(i8*, i8*, i8*, i32, i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
